@@ -13,50 +13,67 @@
 #            /repository
 #                [git repo: standard Spring structure...]
 
-#BASE_DIR="/root/GattosLab"
-BASE_DIR="/home/enrico/Desktop/Prova/GattosLab"
+function await_process_termination () {
+
+    for i in {1..4}; do
+
+        if ! ps -p "$1" > /dev/null; then return 0; fi
+
+        echo "$2"
+        sleep 1s
+
+    done
+
+    return 1
+}
+
+function delete_if_present_and_log () {
+
+    if [ -e "$1" ]; then rm -f "$1" > /dev/null;
+    else echo "$2"; fi
+}
+
+BASE_DIR="/root/GattosLab"
 BUILD_DIR="$BASE_DIR/build"
 REPO_DIR="$BUILD_DIR/repository"
 RUN_DIR="$BASE_DIR/run"
 SECRETS_FILE="$BUILD_DIR/secrets.env"
-APP_USER="enrico"
+APP_USER="gattoslab"
 BOLD_PRINT="\e[1;37m"
 RED_PRINT="\e[1;31m"
 YELLOW_PRINT="\e[1;33m"
 GREEN_PRINT="\e[1;32m"
 RESET_COLORS="\e[0m"
 
-# Get the project source code
 echo -e "$BOLD_PRINT=> PROJECT BUILD$RESET_COLORS"
-echo "-> Cloning the repository"
-cd "$BUILD_DIR"
-rm -fr ./repository
-git clone https://github.com/Clamentos/GattosLab.git repository
+echo "--> Cloning the repository"
+rm -fr "$REPO_DIR"
+git clone https://github.com/Clamentos/GattosLab.git "$REPO_DIR"
 
-# Build the project
-echo "-> Building the project"
-cd "$REPO_DIR"
-mvn clean package -DskipTests
-echo "-> Grabbing the generated JAR"
-JAR_FILE="$(ls target/gattoslab*.jar | head -n 1)"
+echo "--> Building the project with mvn"
+echo ""
+mvn -f "$REPO_DIR"/pom.xml clean package -DskipTests
 
-if [ -z "$JAR_FILE" ]; then
+echo ""
+echo -e "$BOLD_PRINT=> PROJECT DEPLOY$RESET_COLORS"
+echo "--> Grabbing the generated JAR"
+NEW_JAR_FILE="$(find "$REPO_DIR"/target/ -name "gattoslab*.jar")"
 
-    echo -e "$RED_PRINT    -> JAR not found!$RESET_COLORS"
+if [ -z "$NEW_JAR_FILE" ]; then
+
+    echo -e "$RED_PRINT--> JAR not found!$RESET_COLORS"
     exit 1
 fi
 
-JAR_NAME="$(basename "$JAR_FILE")"
+NEW_JAR_NAME="$(basename "$NEW_JAR_FILE")"
 
-# Stop currently running application
-echo -e "$BOLD_PRINT=> PROJECT DEPLOY$RESET_COLORS"
-echo "-> Stopping the old application"
-
+echo "--> Stopping the old application"
 OLD_PID=0
+PID_FILE="$RUN_DIR"/pid.txt;
 
-if [ -e "$RUN_DIR/pid.txt" ]; then
+if [ -e "$PID_FILE" ]; then
 
-    OLD_PID="$(cat $RUN_DIR/pid.txt)"
+    OLD_PID="$(cat "$PID_FILE")"
 
     if [ -n "$OLD_PID" ]; then
 
@@ -64,70 +81,61 @@ if [ -e "$RUN_DIR/pid.txt" ]; then
 
             kill -15 "$OLD_PID"
 
-            if ! await_process_termination "$OLD_PID" "-> Waiting for process $OLD_PID to terminate gracefully..."; then
+            if ! await_process_termination "$OLD_PID" "---> Waiting for process $OLD_PID to terminate gracefully..."; then
 
                 kill -9 "$OLD_PID"
 
-                if ! await_process_termination "$OLD_PID" "-> Waiting for process $OLD_PID to terminate..."; then
+                if ! await_process_termination "$OLD_PID" "---> Waiting for process $OLD_PID to terminate..."; then
 
-                    echo -e "$RED_PRINT-> Could not stop $OLD_PID!$RESET_COLORS"
+                    echo -e "$RED_PRINT---> Could not stop $OLD_PID!$RESET_COLORS"
                     exit 1
                 fi
             fi
 
-            echo "-> Process $OLD_PID stopped"
+            echo "---> Process $OLD_PID stopped"
 
         else
 
-            echo "-> No previous process running"
+            echo "---> No previous process running"
         fi
 
     else
 
-        echo -e "$YELLOW_PRINT-> pid.txt file was empty, continuing...$RESET_COLORS"
+        echo -e "$YELLOW_PRINT---> pid.txt file was empty, continuing...$RESET_COLORS"
     fi
 
 else
 
-    echo -e "$YELLOW_PRINT-> pid.txt file does not exist, continuing...$RESET_COLORS"
+    echo -e "$YELLOW_PRINT---> pid.txt file does not exist, continuing...$RESET_COLORS"
 fi
 
-# Deploy the new JAR
-echo "-> Deleting the old JAR"
-OLD_JAR="$RUN_DIR/gattoslab*.jar"
+echo "--> Deleting the old files"
+OLD_JAR_FILE="$(find "$RUN_DIR"/ -name "gattoslab*.jar")"
+delete_if_present_and_log "$OLD_JAR_FILE" "---> Old JAR was not present"
+delete_if_present_and_log "$PID_FILE" "---> Old pid.txt was not present"
 
-if [ -e "$OLD_JAR" ]; then
-
-    rm -f "OLD_JAR" > /dev/null
-
-else
-
-    echo "-> Old JAR was not present"
-fi
-
-echo "-> Copying $JAR_NAME into run directory"
-cp "$JAR_FILE" "$RUN_DIR/"
-chown "$APP_USER:$APP_USER" "$RUN_DIR/$JAR_NAME"
+echo "--> Copying $NEW_JAR_NAME into run directory"
+cp "$NEW_JAR_FILE" "$RUN_DIR"
+chown "$APP_USER:$APP_USER" "$RUN_DIR/$NEW_JAR_NAME"
 
 # Launch the new application and wait for a successful start
-echo "-> Starting the new application"
+echo "--> Starting the new application"
 cd "$RUN_DIR"
-java -jar "$RUN_DIR/$JAR_NAME" --spring.profiles.active=dev &
 
-#(
-#    set -a
-#    source "$SECRETS_FILE"
-#    sudo -u "$APP_USER" java -jar "$RUN_DIR/$JAR_NAME" --spring.profiles.active=prod -Xmx1024M &
-#)
+(
+    set -a
+    source "$SECRETS_FILE"
+    runuser "$APP_USER" -c 'java -jar "$RUN_DIR/$NEW_JAR_NAME" --spring.profiles.active=prod -XX:+UnlockExperimentalVMOptions -Xmx1024M -XX:+UseZGC -XX:+ZGenerational -XX:+UseStringDeduplication -XX:+OptimizeStringConcat -XX:+UseCompressedOops -XX:+UseCompressedClassPointers -XX:+UseCompactObjectHeaders -XX:+AlwaysPreTouch -XX:+UseHugeTLBFS -XX:+UseSuperWord -XX:+ExitOnOutOfMemoryError -XX:-FlightRecorder' &
+)
 
-echo "-> Waiting for the app to start"
+echo "--> Waiting for the app to start"
 
 NEW_PID=0
 PID_FILE_EXISTS=0
 
 for i in {1..4}; do
 
-    if [ ! -e "$RUN_DIR/pid.txt" ]; then
+    if [ -e "$PID_FILE" ]; then
 
         PID_FILE_EXISTS=1
         break
@@ -141,7 +149,7 @@ if [ "$PID_FILE_EXISTS" -eq 1 ]; then
 
     for i in {1..4}; do
 
-        NEW_PID="$(cat $RUN_DIR/pid.txt)"
+        NEW_PID="$(cat "$PID_FILE")"
 
         if [ -n "$NEW_PID" ]; then
 
@@ -157,25 +165,7 @@ if [ "$PID_FILE_EXISTS" -eq 1 ]; then
     done
 fi
 
-echo -e "$RED_PRINT-> Startup failed, check logs$RESET_COLORS"
+if [ "$PID_FILE_EXISTS" -eq 1 ]; then echo -e "$RED_PRINT---> Startup failed, missing new pid.txt$RESET_COLORS";
+else echo -e "$RED_PRINT---> Startup failed, check logs$RESET_COLORS"; fi
+
 exit 1
-
-
-
-
-function await_process_termination () {
-
-    for i in {1..4}; do
-
-        if !ps -p "$1" > /dev/null; then
-
-            return 0
-        fi
-
-        echo "$2"
-        sleep 1s
-
-    done
-
-    return 1
-}
